--- a/src/lego_throw/CMakeLists.txt
+++ b/src/lego_throw/CMakeLists.txt
@@ -16,7 +16,8 @@ find_package(catkin REQUIRED COMPONENTS
   moveit_ros_planning_interface
   moveit_visual_tools
   message_generation
-  
+  genmsg 
+  actionlib_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -60,23 +61,24 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
- add_service_files(
-   FILES
-   pick_option.srv
- )
+add_service_files(
+  FILES
+  pick_option.srv
+)
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+add_action_files(
+  DIRECTORY
+  FILES
+  pick_option.action
+)
 
 ## Generate added messages and services with any dependencies listed here
- generate_messages(
-   DEPENDENCIES
-   std_msgs
- )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+  actionlib_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
