--- a/src/lego_throw/package.xml
+++ b/src/lego_throw/package.xml
@@ -62,6 +62,7 @@
   <exec_depend>message_runtime</exec_depend>
   <build_depend>actionlib_msgs</build_depend>
   <exec_depend>actionlib_msgs</exec_depend>
+  <exec_depend>message_generation</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
