--- a/src/lego_throw/CMakeLists.txt
+++ b/src/lego_throw/CMakeLists.txt
@@ -5,6 +5,10 @@ project(lego_throw)
 # add_compile_options(-std=c++11)
 set(JSON_BuildTests OFF CACHE INTERNAL "")
 
+#set("OpenCV_DIR" "/home/ubuntu18/libraries/opencv/build") 
+#set("realsense2_DIR" "/opt/ros/melodic/lib/cmake/realsense2")
+
+
 add_subdirectory(include/json_develop)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -18,6 +22,8 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   genmsg 
   actionlib_msgs
+ # OpenCV
+ # realsense2
 )
 
 ## System dependencies are found with CMake's conventions
@@ -63,7 +69,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate services in the 'srv' folder
 add_service_files(
   FILES
-  pick_option.srv
+  camera.srv
 )
 
 ## Generate actions in the 'action' folder
@@ -215,11 +221,12 @@ include_directories(
 add_executable(ludicrousThrow src/ludicrousThrow.cpp)
 target_link_libraries(ludicrousThrow ${catkin_LIBRARIES})
 
-add_executable(testing src/testing.cpp)
-target_link_libraries(testing ${catkin_LIBRARIES})
-
 add_executable(master_node src/master_node.cpp)
 target_link_libraries(master_node ${catkin_LIBRARIES} nlohmann_json)
 
 add_executable(picking_node src/picking_node.cpp)
 target_link_libraries(picking_node ${catkin_LIBRARIES})
+
+
+# add_executable(realsenseD435 src/realsenseD435.cpp)
+# target_link_libraries(realsenseD435 ${catkin_LIBRARIES} realsense2 -lzbar)
