--- a/src/lego_throw/CMakeLists.txt
+++ b/src/lego_throw/CMakeLists.txt
@@ -75,6 +75,8 @@ add_service_files(
 ## Generate actions in the 'action' folder
 add_action_files(
   DIRECTORY
+  action
+  
   FILES
   pick_option.action
   throwing.action
@@ -221,14 +223,16 @@ include_directories(
 # catkin_add_nosetests(test)
 
 add_executable(ludicrousThrow src/ludicrousThrow.cpp)
+add_dependencies(ludicrousThrow ${${PROJECT_NAME}_EXPORTED_TARGETS})
 target_link_libraries(ludicrousThrow ${catkin_LIBRARIES})
 
 add_executable(master_node src/master_node.cpp)
+add_dependencies(master_node ${${PROJECT_NAME}_EXPORTED_TARGETS})
 target_link_libraries(master_node ${catkin_LIBRARIES} nlohmann_json)
 
 add_executable(picking_node src/picking_node.cpp)
+add_dependencies(picking_node ${${PROJECT_NAME}_EXPORTED_TARGETS})
 target_link_libraries(picking_node ${catkin_LIBRARIES})
-
 
 # add_executable(realsenseD435 src/realsenseD435.cpp)
 # target_link_libraries(realsenseD435 ${catkin_LIBRARIES} realsense2 -lzbar)
