Changed filename to camera_node.cpp

--- a/src/lego_throw/CMakeLists.txt
+++ b/src/lego_throw/CMakeLists.txt
@@ -234,5 +234,5 @@ add_executable(picking_node src/picking_node.cpp)
 add_dependencies(picking_node ${${PROJECT_NAME}_EXPORTED_TARGETS})
 target_link_libraries(picking_node ${catkin_LIBRARIES})
 
-add_executable(camera_node src/realsenseD435.cpp)
+add_executable(camera_node src/camera_node.cpp)
 target_link_libraries(camera_node ${catkin_LIBRARIES} realsense2 -lzbar)
