--- a/src/lego_throw/CMakeLists.txt
+++ b/src/lego_throw/CMakeLists.txt
@@ -230,5 +230,9 @@ add_executable(picking_node src/picking_node.cpp)
 add_dependencies(picking_node ${${PROJECT_NAME}_EXPORTED_TARGETS})
 target_link_libraries(picking_node ${catkin_LIBRARIES})
 
+add_executable(throwing_node src/throwing_node.cpp)
+add_dependencies(throwing_node ${${PROJECT_NAME}_EXPORTED_TARGETS})
+target_link_libraries(throwing_node ${catkin_LIBRARIES})
+
 add_executable(camera_node src/camera_node.cpp)
 target_link_libraries(camera_node ${catkin_LIBRARIES} realsense2 -lzbar)
